--- a/items_config.yaml
+++ b/items_config.yaml
@@ -1,5 +1,9 @@
+# This is an YAML Document to customize the fields that can be chosen for each item
+# You can change it as you wish except changing the names of the fields "Types" and "Price"
+
 # YAML Document starts with ---
 # Comments start with #
+
 ---
 Type: # do not change the field name
   - SHIRT
@@ -15,15 +19,17 @@ Size:
   - XL
 
 Color:
-  - RED
   - BLACK
-  - BLUE
   - WHITE
+  - RED
+  - BLUE
+  - GREEN
+  - GREY
   - MULTICOLOR
 
-Fabric:
-  - COTTON
-  - POLYESTER
+# Fabric:
+#   - COTTON
+#   - POLYESTER
 
 Price: # do not change the field name
   - 10
